Bug 386836 - same map used in several img caused firefox crash, patch=me, ginn.chen, r=me